Added Unimgr Documentation
Change-Id: I8fb8ce196ed0e6802629f181c3dec4711342aa69
Signed-off-by: Mufaddal Makati <m.makati@cablelabs.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -113,6 +113,8 @@ include::vtn/vtn-dev.adoc[]
 
 include::yangtools/yangtools.adoc[]
 
+include::unimgr/unimgr_developer_guide.adoc[]
+
 :numbered!:
 
 ///////
