--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -77,3 +77,5 @@ include::usc/odl-usc-channel-user.adoc[USC]
 include::vtn/vtn-user.adoc[]
 
 include::controller/netconf/odl-netconf-user.adoc[]
+
+include::unimgr/unimgr_user_guide.adoc[]
