--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -74,6 +74,8 @@ include::controller/netconf/odl-netconf-dev.adoc[]
 
 include::nic/nic-dev.adoc[]
 
+include::netide/netide-developer-guide.adoc[]
+
 include::neutron/neutron.adoc[]
 
 include::sdninterfaceapp/odl-sdninterfaceapp-all-dev.adoc[]
