--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -52,6 +52,8 @@ include::lfm/lispflowmapping-msmr-user.adoc[LISP flow mapping]
 
 include::nemo/odl-nemo-engine-user.adoc[NEMO]
 
+include::netide/odl-netide-user-guide.adoc[NetIDE]
+
 include::nic/nic-user.adoc[NIC]
 
 include::sdninterfaceapp/odl-sdninterfaceapp-all-user.adoc[ODL-SDNi]
