Outline for OVSDB Beryllium documents.
Added sections for two new features:
- Service Function Chaining
- Hardware VTEP

Patch 2: Added references to main "Getting and Installing OpenDaylight" section
rather than repeating information.

Patch 3: Minor formatting changes

Change-Id: I49711e3153e99480db76636f79b6984d01f7cc67
Signed-off-by: Andre Fredette <afredette@redhat.com>

--- a/manuals/developer-guide/src/main/asciidoc/ovsdb/ovsdb-developer.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/ovsdb/ovsdb-developer.adoc
@@ -2,3 +2,8 @@
 include::ovsdb-southbound-developer.adoc[]
 
 include::ovsdb-openstack-developer.adoc[]
+
+include::ovsdb-sfc-developer.adoc[]
+
+include::ovsdb-hwvtep-developer.adoc[]
+
