--- a/manuals/getting-started-guide/src/main/asciidoc/general_installation.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/general_installation.adoc
@@ -1,6 +1,6 @@
-== Getting and Installing OpenDaylight Lithium
+== Getting and Installing OpenDaylight
 
-=== Downloading and installing OpenDaylight Lithium
+=== Downloading and installing OpenDaylight
 The default distribution can be found on the OpenDaylight software
 download page: http://www.opendaylight.org/software/downloads
 
