--- a/manuals/getting-started-guide/src/main/asciidoc/ovsdb/ovsdb-openstack-install.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/ovsdb/ovsdb-openstack-install.adoc
@@ -9,20 +9,11 @@ For information on OVS, see http://openvswitch.org/[Open vSwitch].
 With OpenStack within the SDN context, controllers and applications interact using two channels: OpenFlow and OVSDB. OpenFlow addresses the forwarding-side of the OVS functionality. OVSDB, on the other hand, addresses the management-plane.
 A simple and concise overview of Open Virtual Switch Database (OVSDB) is available at: http://networkstatic.net/getting-started-ovsdb/
 
-=== Pre Requisites for Installing OVSDB OpenStack
-* JRE 1.7+
-* A distribution of OpenDaylight
-
 === Preparing for Installation
-. Download a copy of the latest OpenDaylight release in a Pre-Build archive of your choosing.
-http://www.opendaylight.org/software/downloads[Download OpenDaylight]
-
+Follow the instructions in <<_getting_and_installing_opendaylight,Getting and Installing OpenDaylight>>.
 
 === Installing OVSDB OpenStack
-. Extract the OpenDaylight distribution somewhere.
-. Navigate to the /bin/ directory
-. Execute the karaf binary file, that should bring up the OpenDaylight console
-. Install the required features with these commands:
+Install the required features with these commands:
 feature:install odl-ovsdb-openstack
 
 ==== Sample output from the Karaf console
