--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -48,6 +48,8 @@ include::lacp/lacp-user.adoc[LACP]
 
 include::lfm/lispflowmapping-all-user.adoc[LISP flow mapping]
 
+include::nemo/odl-nemo-engine-user.adoc[NEMO]
+
 include::nic/nic-user.adoc[NIC]
 
 include::sdninterfaceapp/odl-sdninterfaceapp-all-user.adoc[ODL-SDNi]
