Armoury Project Documentation
This commit includes:
    - Architecture detail in user docs.
    - Added sub-section for driver-registry to user and dev docs.
    - Tutorial section for Driver Registry.

Change-Id: Iebcdce0d85ac1b1b9f5f78889df25b9d65de4354
Signed-off-by: subhash <subh.singh007@gmail.com>

--- a/manuals/developer-guide/src/main/asciidoc/armoury/odl-armoury-dev.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/armoury/odl-armoury-dev.adoc
@@ -18,5 +18,8 @@ TBD: A description of Armoury Catalog API.
 ==== Armoury Workload Manager API
 TBD: A description of Armoury Workload Manager API.
 
+==== Armoury Driver Registry API
+TBD: A description of Armoury Driver Registry API.
+
 === API Reference Documentation
 TBD: Provide links to JavaDoc, REST API documentation, etc.
