WIP: Armoury Project Documentation
This commit includes:
    - Documentation outline for for armoury.
    - Architecture detail in user docs.
    - Added sub-section for driver-registry to user and dev docs.

Change-Id: Iebcdce0d85ac1b1b9f5f78889df25b9d65de4354
Signed-off-by: A H <an.ho@huawei.com>
Signed-off-by: subhash <subh.singh007@gmail.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -54,6 +54,8 @@ include::developing-app.adoc[]
 
 include::alto/alto-developer-guide.adoc[ALTO]
 
+include::armoury/odl-armoury-dev.adoc[ARMOURY]
+
 include::bgpcep/odl-bgpcep-bgp-all-dev.adoc[BGP]
 
 include::capwap/capwap-dev.adoc[CAPWAP]
