--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -32,6 +32,8 @@ include::alto/alto-user-guide.adoc[ALTO]
 
 include::aaa/aaa.adoc[AAA]
 
+include::armoury/odl-armoury-user.adoc[ARMOURY]
+
 include::bgpcep/odl-bgpcep-bgp-all-user.adoc[BGP]
 
 include::capwap/capwap-user.adoc[CAPWAP]
