TSDR Beryllium documentation.
Combined documents for three TSDR data stores into one.

Signed-off-by: YuLing Chen <yuling_c@dell.com>
Change-Id: I3533ba542faabadbb7f6ed2c82c26caf6c60e51f

--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -74,9 +74,7 @@ include::sxp/odl-sxp-user.adoc[]
 
 include::tcpmd5/odl-tcpmd5-all-user.adoc[TCP-MD5]
 
-include::tsdr/tsdr-h2-user.adoc[]
-
-include::tsdr/tsdr-hbase-user.adoc[]
+include::tsdr/tsdr-user-guide.adoc[]
 
 include::ttp/ttp-cli-tools-user.adoc[TTP]
 
