--- a/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
@@ -79,9 +79,7 @@ include::opflex/agent-ovs-install.adoc[]
 
 include::ovsdb/ovsdb-install.adoc[]
 
-include::tsdr/tsdr-h2-install.adoc[]
-
-include::tsdr/tsdr-hbase-install.adoc[]
+include::tsdr/tsdr-installation-guide.adoc[]
 
 include::vtn/vtn-install.adoc[]
 
