--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -66,6 +66,8 @@ include::sxp/odl-sxp-user.adoc[]
 
 include::tcpmd5/odl-tcpmd5-all-user.adoc[TCP-MD5]
 
+include::tsdr/tsdr-cassandra.adoc[]
+
 include::tsdr/tsdr-h2-user.adoc[]
 
 include::tsdr/tsdr-hbase-user.adoc[]
