--- a/manuals/getting-started-guide/src/main/asciidoc/tsdr/tsdr-hbase-install.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/tsdr/tsdr-hbase-install.adoc
@@ -16,8 +16,7 @@ The Time Series Data Repository (TSDR) project in OpenDaylight (ODL) creates a f
 
 Data Collection Service handles the collection of time series data into TSDR and hands it over to Data Storage Service. Data Storage Service stores the data into TSDR through TSDR Persistence Layer. TSDR Persistence Layer provides generic Service APIs allowing various data stores to be plugged in. Data Aggregation Service aggregates time series fine-grained raw data into course-grained roll-up data to control the size of the data. Data Purging Service periodically purges both fine-grained raw data and course-granined aggregated data according to user-defined schedules.
 
-
-In Lithium, we implemented Data Collection Service, Data Storage Service, TSDR Persistence Layer, TSDR HBase Data Store, and TSDR H2 Data Store. Among these services and components, time series data is communicated using a common TSDR data model, which is designed and implemented for the abstraction of the time series data commonalities. With these functions, TSDR will be able to collect the data from the data sources and store them into one of the TSDR data stores: either HBase Data Store or H2 Data Store. We also provided a simple query command from Karaf console for the user to retrieve TSDR data from the data stores.
+In Beryllium, we implemented Data Collection Service, Data Storage Service, TSDR Persistence Layer, TSDR HBase Data Store, and TSDR H2 Data Store. Among these services and components, time series data is communicated using a common TSDR data model, which is designed and implemented for the abstraction of the time series data commonalities. With these functions, TSDR will be able to collect the data from the data sources and store them into one of the TSDR data stores: either HBase Data Store or H2 Data Store. We also provided a simple query command from Karaf console for the user to retrieve TSDR data from the data stores.
 
 A future release will contain Data Aggregation service, Data Purging Service, and a full-fledged Data Query Service with Norghbound APIs.
 
@@ -44,7 +43,7 @@ Installing TSDR HBase Data Store contains two steps:
 
 This installation guide will only cover the first step. For installing TSDR HBase Data Store features, please refer to TSDR HBase Data Store User Guide.
 
-In Lithium, we only support HBase single node running together on the same machine as ODL controller. Therefore, follow the steps to download and install HBase server onto the same box as where ODL controller is running:
+In Beryllium, we only support HBase single node running together on the same machine as ODL controller. Therefore, follow the steps to download and install HBase server onto the same box as where ODL controller is running:
 
 * Create a folder in Linux operating system for the HBase server.
 
@@ -95,10 +94,10 @@ After the HBase server is properly installed, start hbase server and hbase shell
 Please refer to HBase Data Store User Guide.
 
 === Upgrading From a Previous Release
-Lithium is the first release of TSDR. Upgrading is not applicable for TSDR Lithium release.
+Beryllium is the first release of TSDR. Upgrading is not applicable for TSDR Beryllium release.
 
-=== Uninstalling HBase Data Store 
-To uninstall TSDR HBase Data Store, 
+=== Uninstalling HBase Data Store
+To uninstall TSDR HBase Data Store,
 
 .. stop hbase server
 
